--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ li{
 }
 
 #home{
-	background: url("http://pixabay.com/static/uploads/photo/2012/03/03/23/00/alcohol-21488_640.jpg") no-repeat center center fixed;
+	background: url("images/brewery.jpg") no-repeat center center fixed;
 	background-size: cover;
 }
 
@@ -77,7 +77,7 @@ li{
 }
 
 #content{
-	background: url("http://pixabay.com/static/uploads/photo/2012/03/03/23/00/alcohol-21488_640.jpg") no-repeat center center fixed;
+	background: url("images/brewery.jpg") no-repeat center center fixed;
 	background-size: cover;
 }
 
